--- a/02.DataTypesAndVariables/03.ExactSumOfRealNumbers/03.ExactSumOfRealNumbers.csproj
+++ b/02.DataTypesAndVariables/03.ExactSumOfRealNumbers/03.ExactSumOfRealNumbers.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>_01.ConvertMetersToKilometers</RootNamespace>
+    <RootNamespace>_03.ExactSumOfRealNumbers</RootNamespace>
   </PropertyGroup>
 
 </Project>
